--- a/R&S_app_v4/howToRunAutomatedAssessment.Rmd
+++ b/R&S_app_v4/howToRunAutomatedAssessment.Rmd
@@ -74,7 +74,7 @@ conventionals <- read_csv('data/final2020data/conventionals_final2020_citmon1.cs
 # Roger's metals data pull
 WCmetals <- read_csv('data/final2020data/CEDSWQM_2020_IR_DATA-WATER_METALS_VALUES_20190207_EVJ.csv')
 Smetals <- read_excel('data/final2020data/CEDSWQM_2020_IR_DATA-CEDSWQM_SEDIMENT_20190213.xlsx') %>%
-  dplyr::select(FDT_STA_ID:ZINC..70, COMMENT..89)
+  dplyr::select(FDT_STA_ID:ZINC...70, COMMENT...89)
 names(Smetals) <- gsub( "[..].*", "", names(Smetals)) # remove anything after .. in name
 
 # Bring in latest EDAS VSCI and (combined) VCPMI queries
