--- a/R&S_app_v4/howToRunAutomatedAssessment.Rmd
+++ b/R&S_app_v4/howToRunAutomatedAssessment.Rmd
@@ -205,12 +205,18 @@ for(i in 1:nrow(stationTable)){
                    tempExceedances(stationData),
                    DOExceedances_Min(stationData),
                    pHExceedances(stationData),
-                   bacteriaExceedances_OLD(bacteria_Assessment_OLD(stationData, 'E.COLI', 126, 235),'E.COLI') %>% 
+                   bacteriaExceedances_OLD(bacteria_Assessment_OLD(citmonOutOfBacteria(stationData, E.COLI, ECOLI_RMK), 'E.COLI', 126, 235),'E.COLI') %>%
                      dplyr::rename('ECOLI_VIO' = 'E.COLI_VIO', 'ECOLI_SAMP'='E.COLI_SAMP', 'ECOLI_STAT'='E.COLI_STAT'),
+                  # No citmon way
+                  #bacteriaExceedances_OLD(bacteria_Assessment_OLD(stationData, 'E.COLI', 126, 235),'E.COLI') %>% 
+                  #   dplyr::rename('ECOLI_VIO' = 'E.COLI_VIO', 'ECOLI_SAMP'='E.COLI_SAMP', 'ECOLI_STAT'='E.COLI_STAT'),
                    # new bacteria exceedance stats
-                   bacteriaExceedances_NEW(stationData,'E.COLI', 10, 410, 126),
-                   bacteriaExceedances_OLD(bacteria_Assessment_OLD(stationData, 'ENTEROCOCCI', 35, 104),'ENTEROCOCCI') %>% 
+                  bacteriaExceedances_NEW(stationData,'E.COLI', 10, 410, 126),
+                  bacteriaExceedances_OLD(bacteria_Assessment_OLD(citmonOutOfBacteria(stationData, ENTEROCOCCI, RMK_31649), 'ENTEROCOCCI', 35, 104),'ENTEROCOCCI') %>%
                      dplyr::rename('ENTER_VIO' = 'ENTEROCOCCI_VIO', 'ENTER_SAMP'='ENTEROCOCCI_SAMP', 'ENTER_STAT'='ENTEROCOCCI_STAT'),
+                  # No citmon way  
+                  #bacteriaExceedances_OLD(bacteria_Assessment_OLD(stationData, 'ENTEROCOCCI', 35, 104),'ENTEROCOCCI') %>% 
+                  #   dplyr::rename('ENTER_VIO' = 'ENTEROCOCCI_VIO', 'ENTER_SAMP'='ENTEROCOCCI_SAMP', 'ENTER_STAT'='ENTEROCOCCI_STAT'),
                    #new bacteria exceedance stats
                    bacteriaExceedances_NEW(stationData,'ENTEROCOCCI',10, 35, 104),
                    metalsExceedances(filter(WCmetals, FDT_STA_ID %in% stationData$FDT_STA_ID) %>% 
@@ -225,8 +231,11 @@ for(i in 1:nrow(stationTable)){
                    data.frame(FISH_MET_VIO='Not Analyzed by App', FISH_MET_STAT='Not Analyzed by App'), # Placeholder for fish metals
                    data.frame(FISH_TOX_VIO='Not Analyzed by App', FISH_TOX_STAT='Not Analyzed by App'),# Placeholder for fish toxics
                    benthicAssessment(stationData,conventionals_sf,VSCI,VCPMI),
-                   countTP(stationData),
-                   countchla(stationData),
+                   countTP(citmonOutOfBacteria(stationData, PHOSPHORUS, RMK_PHOSPHORUS)),
+                   countchla(citmonOutOfBacteria(stationData, CHLOROPHYLL, RMK_32211)),
+                  # No citmon method
+                  #countTP(stationData),
+                  # countchla(stationData),
                    # Chronic Ammonia printed in Comments
                    data.frame(COMMENTS= paste('WAT_TOX fields indicate acute ammonia calculations. Chronic Ammonia Violations: ',chronicAmmonia[1,],
                                               citmonComment(stationData)))) %>%
